# livewall

./: CHANGELOG.md  README.md  README_zh.md  pyproject.toml
demo/: update_wallpaper_links.py
prompt/: prompt.md
src/livewall/: __init__.py  cache.py  cli.py  config.py  desktop.py  index.py
src/livewall/sources/: __init__.py  ftp.py  local.py
tests/: test_livewall.py
