[project]
name = "livewall"
version = "0.2.0"
description = "Dynamic wallpaper engine CLI for macOS"
readme = "README.md"
authors = [
    { name = "cheerchen", email = "5109459+CheerChen@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
livewall = "livewall.cli:cli"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3"]
